@@ -1,20 +1,21 @@
 package com.example.demo.servicies;
 
 import com.example.demo.repository.UnitOfWork;
-import com.example.demo.repository.entities.*;
-import com.example.demo.repository.repos.*;
+import com.example.demo.repository.entities.Category;
+import com.example.demo.repository.entities.Film;
+import com.example.demo.repository.entities.FilmCategory;
+import com.example.demo.repository.entities.FilmCategoryId;
+import com.example.demo.repository.repos.FilmCategoryRepo;
 import com.example.demo.util.Mapper;
 import com.example.demo.webservices.rest.DTOs.requests.FilmCategoryDTOReq;
 import com.example.demo.webservices.rest.DTOs.resources.FilmCategoryDTOResp;
 import com.example.demo.webservices.rest.exception.exceptions.FileNotFoundException;
 import com.example.demo.webservices.rest.exception.exceptions.OperationFaildException;
 import jakarta.persistence.PersistenceException;
-import org.modelmapper.ModelMapper;
-import java.time.Instant;
-import java.util.List;
-import java.util.stream.Collectors;
 
-public class FilmCategoryService extends BaseService<FilmCategory, FilmCategoryDTOResp, FilmCategoryRepo, FilmCategoryDTOReq>{
+import java.util.List;
+
+public class FilmCategoryService extends BaseService<FilmCategory, FilmCategoryDTOResp, FilmCategoryRepo, FilmCategoryDTOReq> {
     @Override
     public FilmCategory post(FilmCategoryDTOReq filmCategoryDTOReq) throws PersistenceException {
         //Fetch language from db
@@ -34,7 +35,7 @@ public class FilmCategoryService extends BaseService<FilmCategory, FilmCategoryD
         //Save this filmCategory
         try {
             UnitOfWork.getInstance().getFilmCategoryRepo().update(filmCategory);
-        }catch (PersistenceException persistenceException){
+        } catch (PersistenceException persistenceException) {
             throw new OperationFaildException("Can't save this filmCategory!!");
         }
 
@@ -44,24 +45,25 @@ public class FilmCategoryService extends BaseService<FilmCategory, FilmCategoryD
     public List<FilmCategoryDTOResp> getByFilm(int filmId) throws FileNotFoundException {
         try {
             Film film = UnitOfWork.getInstance().getFilmRepo().find(filmId);
-            List<FilmCategory> filmActors = UnitOfWork.getInstance().getFilmCategoryRepo().<Film>find("film",film);
+            List<FilmCategory> filmActors = UnitOfWork.getInstance().getFilmCategoryRepo().<Film>find("film", film);
             List<FilmCategoryDTOResp> dtoResp = filmActors.stream().map(x -> Mapper.MAPPER.getModelMapper().map(x, FilmCategoryDTOResp.class))
-                    .collect(Collectors.toList());
+                    .toList();
 
             return dtoResp;
-        }catch (PersistenceException persistenceException){
+        } catch (PersistenceException persistenceException) {
             throw new FileNotFoundException("Can't find this object!!");
         }
     }
+
     public List<FilmCategoryDTOResp> getByCategory(int categoryId) throws FileNotFoundException {
         try {
             Category category = UnitOfWork.getInstance().getCategoryRepo().find(categoryId);
             List<FilmCategory> filmActors = UnitOfWork.getInstance().getFilmCategoryRepo().<Category>find("category", category);
             List<FilmCategoryDTOResp> dtoResp = filmActors.stream().map(x -> Mapper.MAPPER.getModelMapper().map(x, FilmCategoryDTOResp.class))
-                    .collect(Collectors.toList());
+                    .toList();
 
             return dtoResp;
-        }catch (PersistenceException persistenceException){
+        } catch (PersistenceException persistenceException) {
             throw new FileNotFoundException("Can't find this object!!");
         }
     }
